# End_to_End_Movie_Recommendation_System

./: CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
Artifacts/: nlp_model.pkl
NoteBook_Experiments/: Exploratory Data Analysis.ipynb  Movie_Recommendation_System.ipynb  Sentimental_Analysis_on_reviews.ipynb  tranform.pkl
templates/: home.html
