[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "end-to-end-movie-recommender"
version = "0.0.1"
description = "A movie recommender system"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pandas",
    "numpy",
    "scikit-learn",
    "requests",
    "beautifulsoup4",
    "lxml",
    "seaborn",
    "matplotlib",
    "nltk",
    "bs4>=0.0.2",
    "dvc>=3.42.0",
]

[tool.setuptools]
packages = ["Artifacts"]
py-modules = []

